--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="index.css" rel="stylesheet"></link>
+<link href="home.css" rel="stylesheet"></link>
 </head>
 <body >
 
@@ -28,3 +28,4 @@
 
 </body>
 </html>
+
