--- a/personal2.html
+++ b/personal2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>User Profile</title>
-        <link rel="stylesheet" type="text/css" href="personal.css"/>
+        <link rel="stylesheet" type="text/css" href="personal2.css"/>
     </head>
       <body>
         <div id = "entire-container">
@@ -15,19 +15,19 @@
               <div class="Personal-Information">
                 <h2> Personal Information </h2>
                 <div>
-                Name: RickyRocks
+                Name: Chuck B.
               </div>
                   <div>
-                Email: RickyKicksButt@u.northwestern.edu
+                Email: ChuckBuymore@stanford.edu
               </div>
                   <div>
-                School: Northwestern Univiersity
+                School: Stanford University
               </div>
                   <div>
-                Date Joined: 2/24/18
+                Date Joined: 8/8/17
               </div>
                   <div>
-                Date of Birth: 08/07/98
+                Date of Birth: 12/25/00
               </div>
               </div>
             </div>
@@ -39,25 +39,25 @@
                 Question 1: What was the name of your first pet?
               </div>
                   <div>
-                Answer: C*****e
+                Answer: R***r
               </div>
                   <div>
                 Question 2: What is your mother's maiden name?
               </div>
                   <div>
-                Answer: H****r
+                Answer: D****n
               </div>
                   <div>
                 Question 3: What is the name of the street you lived on when you were in 1st grade?
               </div>
               <div>
-                Answer: F** *****l
+                Answer: W*** *****t
               </div>
               </div>
             </div>
           </div>
           <div id="myNotifcations" class="sidenote">
-            <a href="personal.html"><img class="avatar" src="Account.png" alt="logo"></a>
+            <a href="personal2.html"><img class="avatar" src="Account.png" alt="logo"></a>
           </div>
         </div>
       </body>
