--- a/otheruser1.html
+++ b/otheruser1.html
@@ -87,7 +87,11 @@
           </div>
           <div id="myNotifcations" class="sidenote">
             <a href="personal2.html"><img class="avatar" src="Account.png" alt="logo"></a>
-             <p>Notifications Soon to Come!</p>
+            <h1>Notifications</h1>
+            <div id="Notifications" onload="Notifications(SharedwithChuck)"> Ricky has shared a notebook with you! </div>
+            <div id="Notifications"> You have shared a notebook with Ricky! </div>
+            <div id="Notifications"> Ricky commented on a shared notebook! </div>
+            <div id="Notifications"> You commented on a shared notebook! </div>
           </div>
         </div>
       </body>
