--- a/otheruser1.html
+++ b/otheruser1.html
@@ -88,10 +88,10 @@
           <div id="myNotifcations" class="sidenote">
             <a href="personal2.html"><img class="avatar" src="Account.png" alt="logo"></a>
             <h1>Notifications</h1>
-            <div id="Notifications"> Ricky has shared a notebook with you! </div>
-            <div id="Notifications"> You have shared a notebook with Ricky! </div>
-            <div id="Notifications"> Ricky commented on a shared notebook! </div>
-            <div id="Notifications"> You commented on a shared notebook! </div>
+            <div id="SharedwithChuck"> Ricky has shared a notebook with you! </div>
+            <div id="SharedwithRicky"> You have shared a notebook with Ricky! </div>
+            <div id="CommentRicky"> Ricky commented on a shared notebook! </div>
+            <div id="CommentChuck"> You commented on a shared notebook! </div>
           </div>
         </div>
         <script src="otheruserpage.js"></script>
