--- a/userpage1.html
+++ b/userpage1.html
@@ -88,10 +88,10 @@
           <div id="myNotifcations" class="sidenote">
             <a href="personal.html"><img class="avatar" src="Account.png" alt="logo"></a>
             <h1>Notifications</h1>
-            <div id="Notifications"> Chuck has shared a notebook with you! </div>
-            <div id="Notifications"> You have shared a notebook with Chuck! </div>
-            <div id="Notifications"> Chuck commented on a shared notebook! </div>
-            <div id="Notifications"> You commented on a shared notebook! </div>
+            <div id="SharedwithRicky"> Chuck has shared a notebook with you! </div>
+            <div id="SharedwithChuck"> You have shared a notebook with Chuck! </div>
+            <div id="CommentChuck"> Chuck commented on a shared notebook! </div>
+            <div id="CommentRicky"> You commented on a shared notebook! </div>
           </div>
         </div>
         <script src="userpage.js"></script>
