--- a/userpage2.html
+++ b/userpage2.html
@@ -6,22 +6,19 @@
       <body onload="Notifications()">
         <div id = "entire-container">
           <div id="mySidenav" class="sidenav">
-            <a href="userpage2.html"><img class="avatar" src="cnote.png" alt="logo"></a>
-            <button onclick="document.getElementById('id00').style.display='block'" style="width:auto;">Create a Notebook</button>
-            <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Join a Class</button>
-            <button  onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Create Group</button>
-            <button  onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Join a Group</button>
+            <a href="oruser.html"><img class="avatar" src="cnote.png" alt="logo"></a>
           </div>
+
             <div id="id00" class="modal">
 
-              <form class="modal-content animate" action="/action_page.php">
+              <form class="modal-content animate">
                 <div class="imgcontainer">
-                  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+                  <span onclick="document.getElementById('id00').style.display='none'" class="close" title="Close Modal">&times;</span>
                 </div>
 
                 <div class="container">
-                  <label for="class_name"><b>Class Name</b></label>
-                  <input type="text" placeholder="Ex. Classics 101" name="classname" required>
+                  <label for="class_name"><b>Notebook Name</b></label>
+                  <input type="text" placeholder="Ex. Physics 135-2" name="nbname" required>
                 </div>
                   <div class="container">
                   <button onclick="check2(this.form)" class="submitbtn">Submit</button>
@@ -29,69 +26,47 @@
 
               </form>
             </div>
-            <div id="id01" class="modal">
 
-              <form class="modal-content animate" action="/action_page.php">
-                <div class="imgcontainer">
-                  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-                </div>
-
-                <div class="container">
-                  <label for="class_name"><b>Class Name</b></label>
-                  <input type="text" placeholder="Ex. PHYSICS 135-3" name="classname" required>
-                </div>
-                  <div class="container">
-                  <button type="button" onclick="document.getElementById('id01').style.display='none'" class="submitbtn">Submit</button>
-                </div>
-
-              </form>
-            </div>
-
-            <div id="id02" class="modal">
-
-              <form class="modal-content animate" action="/action_page.php">
-                <div class="imgcontainer">
-                  <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
-                </div>
-
-                <div class="container">
-                  <label for="group_name"><b>Enter New Group Name</b></label>
-                  <input type="text" placeholder="Ex. Team Awesome" name="groupname" required>
-                </div>
-                  <div class="container">
-                  <button type="button" onclick="document.getElementById('id02').style.display='none'" class="submitbtn">Submit</button>
-                </div>
-              </form>
-            </div>
- <div id="id03" class="modal">
-
-              <form class="modal-content animate" action="/action_page.php">
-                <div class="imgcontainer">
-                  <span onclick="document.getElementById('id03').style.display='none'" class="close" title="Close Modal">&times;</span>
-                </div>
-
-                <div class="container">
-                  <label for="group_name"><b>Enter Pre-existing Group Name</b></label>
-                  <input type="text" placeholder="Ex. The Coding Gang" name="groupname" required>
-                </div>
-
-                <div class="container">
-                  <button type="button" onclick="document.getElementById('id03').style.display='none'" class="submitbtn">Submit</button>
-                </div>
-              </form>
-            </div>
           <div id="main" class="dash">
             <h2>Dashboard</h2>
-            <a href="editor1.html"><img id ="n0" class="avatar" src="notebook230.png" alt="notebook 1"></a>
-            <a href="editor2.html"><img id ="n1" class="avatar" src="notebook318.png" alt="notebook 2">
+
+              <div class="contain2">
+                  <a href="editor1.html"><img id ="n0" class="avatar" src="notebook230.png" alt="notebook 1"></a>
+              </div>
+              <div class="contain3">
+                  <a href="editor2.html"><img id ="n1" class="avatar" src="notebook318.png" alt="notebook 2"></a>
+              </div>
+              <div class="contain">
+                      <img button onclick="document.getElementById('id00').style.display='block'"" style="width:auto;" id ="n0" class="avatar" src="add.png" alt="logo">
+                       <div button onclick="document.getElementById('id00').style.display='block'"" style="width:auto;" class="overlay">
+                       <div class="text">Create a Notebook</div>
+                      </div>
+              </div>
+              <div class="contain">
+                      <img id ="n3" class="avatar" src="add.png" alt="logo">
+              </div>
+              <div class="contain2">
+                      <img id ="n4" class="avatar" src="add.png" alt="logo">
+              </div>
+              <div class="contain3">
+                     <img id = "n5" src="add.png" class="avatar" alt="Add a NoteBook">
+              </div>
+
           </div>
+
           <div id="myNotifcations" class="sidenote">
-            <a href="personal.html"><img class="avatar" src="Account.png" alt="logo"></a>
-            <h1>Notifications</h1>
-            <div id="SharedwithRicky"> Chuck has shared a notebook with you! </div>
-            <div id="SharedwithChuck"> You have shared a notebook with Chuck! </div>
-            <div id="CommentChuck"> Chuck commented on a shared notebook! </div>
-            <div id="CommentRicky"> You commented on a shared notebook! </div>
+            <div id ="setContainer">
+              <img class="avatar1" src="gear.png" alt="settings">
+              <a class = "avatar2" href="index.html">Sign Out</a>
+              <a href="personal2.html"><img class="avatar3" src="Account.png" alt="logo"></a>
+            </div>
+            <div id = "notecore" class="note">
+            <h3>Notifications</h3>
+            <div id="SharedwithRicky" > Chuck has shared a notebook <br>with you! </div>
+            <div id="SharedwithChuck"> You have shared a notebook <br>with Chuck! </div>
+            <div id="CommentChuck"> Chuck commented on a shared <br>notebook! </div>
+            <div id="CommentRicky"> You commented on a shared <br>notebook! </div>
+            </div>
           </div>
         </div>
         <script src="userpage.js"></script>
