--- a/otheruser1.html
+++ b/otheruser1.html
@@ -4,14 +4,29 @@
         <link rel="stylesheet" type="text/css" href="otheruser.css"/>
     </head>
       <body onload="Notifications()">
+              <body onload="Notifications()">
+         <div id = "overdash" class = "overdash">
+            <div id = "left" ><a href="#"><img class="avatar" src="cnote.png" alt="logo"></a> </div>
+           <div id = "center"><h1>Dashboard<h1></div>
+            <div id = "right">
+            <div class = "dropdown">
+              <img onclick="myFunction()" class="dropbtn" src="Account.png" alt="user">
+                  <div id="myDropdown" class ="dropdown-content">
+                   <a href="#">Settings</a>
+                    <a href="personal2.html">About Me</a>
+                    <a href="login.html">Sign Out</a>
+                  </div>
+            </div>
+          </div>
+        </div>
         <div id = "entire-container">
           <div id="mySidenav" class="sidenav">
-            <a href="oruser.html"><img class="avatar" src="cnote.png" alt="logo"></a>
+
           </div>
 
             <div id="id00" class="modal">
 
-              <form class="modal-content animate">
+              <form class="modal-content animate" onsubmit="return false">
                 <div class="imgcontainer">
                   <span onclick="document.getElementById('id00').style.display='none'" class="close" title="Close Modal">&times;</span>
                 </div>
@@ -28,7 +43,6 @@
             </div>
 
           <div id="main" class="dash">
-            <h2>Dashboard</h2>
 
               <div class="contain2">
                    <a href="othereditor1.html"><img id ="n0" class="avatar" src="notebook201.png" alt="notebook 1"></a>
@@ -54,17 +68,14 @@
 
           </div>
 
-          <div id="myNotifcations" class="sidenote">
-            <div id ="setContainer">
-              <img class="avatar1" src="gear.png" alt="settings">
-              <a class = "avatar2" href="index.html">Sign Out</a>
-              <a href="personal2.html"><img class="avatar3" src="Account.png" alt="logo"></a>
-            </div>
+          <div class="sidenote">
+
             <div id = "notecore" class="note">
-            <h3>Notifications</h3>
-            <div id="SharedwithChuck"> Ricky has shared a notebook <br>with you! </div>
-            <div id="SharedwithChuck"> You have shared a notebook <br>with Ricky! </div>
-            <div id="CommentRicky"> Ricky commented on a shared <br>notebook! </div>
+            <h2>Notifications</h2>
+            <div id="SharedwithChuck"> Ricky has shared a notebook <br>with you!</div>
+            <div id="SharedwithRicky"> You have shared a notebook <br>with Ricky! </div>
+            <div id="CommentRicky"> Ricky commented on a shared <br>notebook! <br>
+              "Thanks for sharing this with me!"</div>
             <div id="CommentChuck"> You commented on a shared <br>notebook! </div>
             </div>
           </div>
