--- a/personal.html
+++ b/personal.html
@@ -5,12 +5,23 @@
         <link rel="stylesheet" type="text/css" href="personal.css"/>
     </head>
       <body>
+                <div id = "overdash" class = "overdash">
+            <div id = "left" ><a href="javascript:history.back()"><img class="avatar" src="cnote.png" alt="logo"></a> </div>
+           <div id = "center"><h1>My Account Info<h1></div>
+            <div id = "right">
+            <div class = "dropdown">
+              <img onclick="myFunction()" class="dropbtn" src="Account.png" alt="user">
+                  <div id="myDropdown" class ="dropdown-content">
+                    <a href="#">Settings</a>
+                    <a href="javascript:history.back()">Dashboard</a>
+                    <a href="login.html">Sign Out</a>
+                  </div>
+            </div>
+          </div>
         <div id = "entire-container">
           <div id="mySidenav" class="sidenav">
-            <a href="index.html"><img class="avatar" src="cnote.png" alt="logo"></a>
           </div>
           <div id="main" class="dash">
-            <h2>User Profile</h2>
             <div class="infobox">
               <div class="Personal-Information">
                 <h2> Personal Information <img src="edit.png" alt="edit"></h2>
@@ -57,10 +68,10 @@
             </div>
           </div>
           <div id="myNotifcations" class="sidenote">
-            <a href="personal.html"><img class="avatar" src="Account.png" alt="logo"></a>
+
           </div>
         </div>
       </body>
-
+<script src = "userpage.js">
 </script>
 </html>
