--- a/editor2.html
+++ b/editor2.html
@@ -2,35 +2,55 @@
 <html>
   <head>
     <title>Online Collaborative Text Editor</title>
+  <link href="css/bootstrap.min.css" rel="stylesheet"></link>
     <link href="app2.css" rel="stylesheet"></link>
   </head>
-  <body>
-    <header class="header">
-      <h1 class="header_h1"><a href="javascript:history.back()"><img src="cnote.png" alt="cnote"></a></h1>
-      <ul>
-        <li> <button id = "Font">Font </button> </li>
-      	<li> <button id = "Bold">Bold</button></li>
-      	<li> <button id = "Ital">Italicize</button></li>
-      	<li> <button id = "Underline">Underline</button></li>
-      	<li> <button id = "Highlight">Highlight</button></li>
-      	<li> <button id = "Bullet Points">Bullet Points</button></li>
-      	<li> <button id = "Background Button" onclick="changeB2()">Background</button></li>
-        <li> <button id = "Share Notebook" onclick="Share_Ricky()">Share</button></li>
-      </ul>
+  <body onload="Notifications()">
+     <div id = "overdash" class = "overdash">
+            <div id = "left" ><a href="javascript:history.back()"><img class="avatar" src="cnote.png" alt="logo"></a> </div>
+           <div id = "center">
+        <li> <button id = "Font" class = "btn">Font </button> </li>
+        <li> <button id = "Bold" class = "btn">Bold</button></li>
+        <li> <button id = "Ital" class = "btn">Italicize</button></li>
+        <li> <button id = "Underline" class = "btn">Underline</button></li>
+        <li> <button id = "Highlight" class = "btn">Highlight</button></li>
+        <li> <button id = "Bullet Points" class = "btn">Bullet Points</button></li>
+        <li> <button id = "Background_Button" onclick="changeB2()" class = "btn">Background</button></li>
+         <li><button id = "Add_Comment" onclick="Add_Comment_Ricky()" class = "btn">Add Comment</button></li>
+        <li> <button id = "Share_Notebook" onclick="Share_Ricky()" class = "btn">Share</button></li>
+    </div>
+            <div id = "right">
+            <div class = "dropdown">
+              <img onclick="myFunction()" class="dropbtn" src="Account.png" alt="user">
+                  <div id="myDropdown" class ="dropdown-content">
+                    <a href="#">Settings</a>
+                    <a href="javascript:history.back()">Dashboard</a>
+                    <a href="login.html">Sign Out</a>
+                  </div>
+            </div>
+          </div>
 
-      <h2 class = "student_icon"><a href="personal.html"><img src="Account.png" alt = "account"></a></h2>
-    </header>
+    <div id = "entire-container">
+    	<div class = "empty">
+    	</div>
     <div class="doc">
 
-      <div class="background-ribbon">
-        <button id = "Add_Comment" onclick="Add_Comment_Ricky()">Add Comment</button>
-      </div>
-
       <div class="text-editor"><h2 class="class-topic">CSD 318</h2>
-        <textarea placeholder = "Enter Text" rows = "75" cols = "112">
+        <textarea placeholder = "Enter Text">
         </textarea>
       </div>
-    </div>
+  </div>
+       <div class="sidenote">
+                  <div id = "notecore" class="note">
+                  <h2>Notifications</h2>
+                  <div id="SharedwithRicky" > Chuck has shared a notebook <br>with you! </div>
+                  <div id="SharedwithChuck"> You have shared a notebook <br>with Chuck! </div>
+                  <div id="CommentChuck"> Chuck commented on a shared <br>notebook! </div>
+                  <div id="CommentRicky"> You commented on a shared <br>notebook! </div>
+                  </div>
+            </div>
+        </div>
+<script src = "userpage.js"></script>
 <script src="app.js"></script>
   </body>
 </html>
