--- a/othereditor2.html
+++ b/othereditor2.html
@@ -2,35 +2,78 @@
 <html>
   <head>
     <title>Online Collaborative Text Editor</title>
-    <link href="otherapp2.css" rel="stylesheet"></link>
+  <link href="css/bootstrap.min.css" rel="stylesheet"></link>
+    <link href="app2.css" rel="stylesheet"></link>
   </head>
-  <body>
-    <header class="header">
-      <h1 class="header_h1"><a href="javascript:history.back()"><img src="cnote.png" alt="cnote"></a></h1>
-      <ul>
-        <li> <button id = "Font">Font </button> </li>
-      	<li> <button id = "Bold">Bold</button></li>
-      	<li> <button id = "Ital">Italicize</button></li>
-      	<li> <button id = "Underline">Underline</button></li>
-      	<li> <button id = "Highlight">Highlight</button></li>
-      	<li> <button id = "Bullet Points">Bullet Points</button></li>
-      	<li> <button id = "Background Button" onclick="changeB2()">Background</button></li>
-        <li> <button id = "Share Notebook" onclick="Share_Chuck()">Share</button></li>
-      </ul>
+  <body onload="Notifications()">
+     <div id = "overdash" class = "overdash">
+            <div id = "left" ><a href="javascript:history.back()"><img class="avatar" src="cnote.png" alt="logo"></a> </div>
+           <div id = "center">
+        <li> <button id = "Font" class = "btn">Font </button> </li>
+        <li> <button id = "Bold" class = "btn">Bold</button></li>
+        <li> <button id = "Ital" class = "btn">Italicize</button></li>
+        <li> <button id = "Underline" class = "btn">Underline</button></li>
+        <li> <button id = "Highlight" class = "btn">Highlight</button></li>
+        <li> <button id = "Bullet Points" class = "btn">Bullet Points</button></li>
+        <li> <button id = "Background_Button" onclick="changeB()" class = "btn">Background</button></li>
+         <li><button id = "Add_Comment" onclick="Add_Comment_Ricky()" class = "btn">Add Comment</button></li>
+        <li> <button id = "Share_Notebook" onclick="Share_Ricky()" class = "btn">Share</button></li>
+    </div>
+            <div id = "right">
+            <div class = "dropdown">
+              <img onclick="myFunction()" class="dropbtn" src="Account.png" alt="user">
+                  <div id="myDropdown" class ="dropdown-content">
+                    <a href="#">Settings</a>
+                    <a href="javascript:history.back()">Dashboard</a>
+                    <a href="login.html">Sign Out</a>
+                  </div>
+            </div>
+          </div>
 
-      <h2 class = "student_icon"><a href="personal2.html"><img src="Account.png" alt = "account"></a></h2>
-    </header>
+    <div id = "entire-container">
+      <div class = "empty">
+      </div>
     <div class="doc">
 
-      <div class="background-ribbon">
-        <button id = "Add_Comment" onclick="Add_Comment_Ricky()">Add Comment</button>
-      </div>
-
       <div class="text-editor"><h2 class="class-topic">EECS 212</h2>
-        <textarea placeholder = "Enter Text" rows = "75" cols = "112">
-        </textarea>
+        <textarea placeholder = "Enter Text">Strong Induction
+Base case
+Asuume P(k) is true
+Derive that P(k+1)
+With simple induction you use "if p(k) is true then p(k+1) is true" while in strong induction you use "if p(i) is true for all i less than or equal to k then p(k+1) is true", where p(k) is some statement depending on the positive integer k.
+Theorem: Every natural number n > 1 can be written as a product of primes (with repetition) i.e. power of primes.
+Proof: by strong induction on n. P(k): k can can be factored into primes.
+
+Proof by Mathematical Induction
+This is the primary way we will:
+Proves theorems
+Argue about correctness of programs
+Construct and define objects
+Domino Principle: Line up any number of dominos in a row; know the first one over and over and they will all fall.
+P(k): kth domino falls
+Two Requirements: 
+For all k: P(k) -> P(k+1)
+First domino falls i.e. P1 is true.
+To prove: For all k E N, predicate P(k) is true.
+Two steps:
+Base Case: Establish P(0) is true
+For all k E N: P(k) -> P(k+1)
+The base case is very important!
+
+</textarea>
       </div>
-    </div>
+  </div>
+       <div class="sidenote">
+                  <div id = "notecore" class="note">
+                  <h2>Notifications</h2>
+                  <div id="SharedwithRicky" > Chuck has shared a notebook <br>with you! </div>
+                  <div id="SharedwithChuck"> You have shared a notebook <br>with Chuck! </div>
+                  <div id="CommentChuck"> Chuck commented on a shared <br>notebook! </div>
+                  <div id="CommentRicky"> You commented on a shared <br>notebook! </div>
+                  </div>
+            </div>
+        </div>
+<script src = "userpage.js"></script>
 <script src="app.js"></script>
   </body>
 </html>
