--- a/otheruser.html
+++ b/otheruser.html
@@ -2,6 +2,9 @@
     <head>
         <title>My Home Page</title>
         <link rel="stylesheet" type="text/css" href="otheruser.css"/>
+	     <style>
+            @import url('https://fonts.googleapis.com/css?family=Karla:bold|Montserrat');
+        </style>
     </head>
             <body onload="Notifications()">
         <div id = "overdash" class = "overdash">
@@ -12,7 +15,7 @@
               <img onclick="myFunction()" class="dropbtn" src="Account.png" alt="user">
                   <div id="myDropdown" class ="dropdown-content">
                    <a href="#">Settings</a>
-                    <a href="personal.html">About Me</a>
+                    <a href="personal2.html">About Me</a>
                     <a href="login.html">Sign Out</a>
                   </div>
             </div>
