--- a/login.html
+++ b/login.html
@@ -19,6 +19,7 @@
       <label><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
       <button onclick="login(this.form)" value="Login">Login</button>
+      <a href="#">Forgot Password?<a>
 
   </form>
 
